// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchConfigAction function should create actions 1`] = `
Array [
  Object {
    "type": "CONFIGS_FETCH_START",
  },
  Object {
    "payload": Object {
      "data": Object {
        "1993f7b9-f9be-551a-beac-312d6befd0cf": Object {
          "currencies": Array [
            Object {
              "code": "CZK",
              "name": "Czech Republic Koruna",
            },
            Object {
              "code": "LSL",
              "name": "Lesotho Loti",
            },
          ],
        },
        "41cae0fd-b74d-5304-a45c-ba000471eabd": Object {
          "currencies": Array [
            Object {
              "code": "PHP",
              "name": "Philippines Peso",
            },
            Object {
              "code": "DZD",
              "name": "Algeria Dinar",
            },
          ],
        },
        "5b428ac9-ec57-513d-8a08-20199469fb4d": Object {
          "currencies": Array [
            Object {
              "code": "LSL",
              "name": "Lesotho Loti",
            },
            Object {
              "code": "AUD",
              "name": "Australia Dollar",
            },
          ],
        },
        "5b98842f-bfe5-5564-b321-068763d7e2a3": Object {
          "currencies": Array [
            Object {
              "code": "QAR",
              "name": "Qatar Riyal",
            },
            Object {
              "code": "JOD",
              "name": "Jordan Dinar",
            },
          ],
        },
        "611398c5-6bd9-596e-8803-3ed0b093995d": Object {
          "currencies": Array [
            Object {
              "code": "HKD",
              "name": "Hong Kong Dollar",
            },
            Object {
              "code": "FKP",
              "name": "Falkland Islands (Malvinas) Pound",
            },
          ],
        },
        "61fb0e0d-626e-5e0a-831a-ef95d5c32203": Object {
          "currencies": Array [
            Object {
              "code": "DZD",
              "name": "Algeria Dinar",
            },
            Object {
              "code": "MVR",
              "name": "Maldives (Maldive Islands) Rufiyaa",
            },
          ],
        },
        "70c6744c-cba2-5f4c-8a06-0dac0c4e43a1": Object {
          "currencies": Array [
            Object {
              "code": "AMD",
              "name": "Armenia Dram",
            },
            Object {
              "code": "GEL",
              "name": "Georgia Lari",
            },
          ],
        },
        "a2bda952-4369-5d41-9d0b-e6c9947e5b82": Object {
          "currencies": Array [
            Object {
              "code": "SRD",
              "name": "Suriname Dollar",
            },
            Object {
              "code": "CZK",
              "name": "Czech Republic Koruna",
            },
          ],
        },
        "b7fdd67f-5051-58b7-a3c6-84f5da637df5": Object {
          "currencies": Array [
            Object {
              "code": "BIF",
              "name": "Burundi Franc",
            },
            Object {
              "code": "CLP",
              "name": "Chile Peso",
            },
          ],
        },
        "f816e384-0e43-5ce7-a017-deaa8d666774": Object {
          "currencies": Array [
            Object {
              "code": "BDT",
              "name": "Bangladesh Taka",
            },
            Object {
              "code": "VEF",
              "name": "Venezuela Bolivar",
            },
          ],
        },
      },
      "selectedRates": Array [
        "70c6744c-cba2-5f4c-8a06-0dac0c4e43a1",
        "41cae0fd-b74d-5304-a45c-ba000471eabd",
        "5b428ac9-ec57-513d-8a08-20199469fb4d",
        "f816e384-0e43-5ce7-a017-deaa8d666774",
        "5b98842f-bfe5-5564-b321-068763d7e2a3",
        "a2bda952-4369-5d41-9d0b-e6c9947e5b82",
        "1993f7b9-f9be-551a-beac-312d6befd0cf",
        "61fb0e0d-626e-5e0a-831a-ef95d5c32203",
        "b7fdd67f-5051-58b7-a3c6-84f5da637df5",
        "611398c5-6bd9-596e-8803-3ed0b093995d",
      ],
    },
    "type": "CONFIG_FETCH_SUCCESS",
  },
]
`;

exports[`fetchRatesAction function should create actions 1`] = `
Array [
  Object {
    "payload": Array [
      "1",
      "2",
    ],
    "type": "RATES_FETCH_START",
  },
  Object {
    "payload": Object {
      "41cae0fd-b74d-5304-a45c-ba000471eabd": 2.4709,
      "70c6744c-cba2-5f4c-8a06-0dac0c4e43a1": 1.593,
    },
    "type": "RATES_FETCH_SUCCESS",
  },
]
`;

exports[`selectIds function should create an action 1`] = `
Object {
  "payload": Object {
    "ids": Array [
      "1",
      "2",
      "3",
    ],
  },
  "type": "SELECT_RATES_IDS",
}
`;
